Trying to fix browser nav view overlap on mobile

--- a/style.css
+++ b/style.css
@@ -112,7 +112,9 @@ body {
 .completed-container {
   max-height: 30vh;
   overflow: auto;
-  padding: 0rem 4rem 1rem 4rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-bottom: env(safe-area-inset-bottom, 0);
 }
 
 .label-active,
